fix scrolling issues on dark mode

--- a/cordectropuss/www/dark.css
+++ b/cordectropuss/www/dark.css
@@ -614,6 +614,7 @@ hr {
     padding-bottom: 10vh;
     padding-right: 10vw;
     padding-left: 10vw;
+    overflow: auto;
 }
 
 #progress {
