--- a/cordectropuss/www/light.css
+++ b/cordectropuss/www/light.css
@@ -628,11 +628,11 @@ hr {
     padding-bottom: 10vh;
     padding-right: 10vw;
     padding-left: 10vw;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #scrollContainer {
-    overflow: scroll;
+    overflow: auto;
 }
 
 #progress {
